@startuml
skinparam classAttributeIconSize 0
hide empty methods

enum UserStatus {
  ONLINE
  OFFLINE
  DND
  INVISIBLE
}

enum ContactStatus {
  PENDING
  ACCEPTED
  BLOCKED
}

enum MemberRole {
  OWNER
  ADMIN
  MEMBER
}

class User {
  +id: UUID
  +email: String
  +password_hash: String
  +username: String
  +avatar_url: String?
  +status: UserStatus
  +created_at: DateTime
}

class Server {
  +id: UUID
  +name: String
  +owner_id: UUID
  +created_at: DateTime
  +updated_at: DateTime
}

class ServerMember {
  +server_id: UUID
  +user_id: UUID
  +role: MemberRole
  +joined_at: DateTime
}

class Channel {
  +id: UUID
  +server_id: UUID
  +name: String
  +position: Int
  +created_at: DateTime
  +updated_at: DateTime
}

class Invite {
  +id: UUID
  +server_id: UUID
  +code: String
  +created_by: UUID
  +expires_at: DateTime?
  +max_uses: Int?
  +uses_count: Int
  +created_at: DateTime
}

class Contact {
  +user_id: UUID
  +contact_id: UUID
  +status: ContactStatus
  +created_at: DateTime
}

class PrivateConversation {
  +id: UUID
  +user1_id: UUID
  +user2_id: UUID
  +created_at: DateTime
}

class ChannelMessage {
  +message_id: UUID
  +server_id: UUID
  +channel_id: UUID
  +author_id: UUID
  +content: String
  +created_at: DateTime
  +edited_at: DateTime?
  +deleted_at: DateTime?
  +deleted_by: UUID?
}

class DmMessage {
  +message_id: UUID
  +dm_id: UUID
  +author_id: UUID
  +content: String
  +created_at: DateTime
  +edited_at: DateTime?
  +deleted_at: DateTime?
  +deleted_by: UUID?
}

' ====== RELATIONS ======
User "1" <-- "0..*" Server : owner_id

User "1" <-- "0..*" ServerMember
Server "1" <-- "0..*" ServerMember

Server "1" <-- "0..*" Channel

Server "1" <-- "0..*" Invite
User "1" <-- "0..*" Invite : created_by

User "1" <-- "0..*" Contact : user_id
User "1" <-- "0..*" Contact : contact_id

User "1" <-- "0..*" PrivateConversation : user1_id
User "1" <-- "0..*" PrivateConversation : user2_id

Channel "1" <-- "0..*" ChannelMessage
Server "1" <-- "0..*" ChannelMessage
User "1" <-- "0..*" ChannelMessage : author_id

PrivateConversation "1" <-- "0..*" DmMessage
User "1" <-- "0..*" DmMessage : author_id

@enduml